<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:text="@string/Code_Book"></TextView>

        <TextView
            android:id="@+id/CodeBook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:text="@string/Name_Book"></TextView>

        <TextView
            android:id="@+id/NameBook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:text="@string/NumPages_Book"></TextView>

        <TextView
            android:id="@+id/NumPagesBook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"></TextView>

</LinearLayout>