<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextCreateBookName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/BookName"
            android:layout_margin="5sp"></TextView>

        <EditText
            android:id="@+id/EditCreateBookName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="295sp"
            android:layout_margin="5sp"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextCreateBookPages"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/NumPages"
            android:layout_margin="5sp"></TextView>

        <EditText
            android:id="@+id/EditCreateBookPages"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="250sp"
            android:inputType="number"
            android:layout_margin="5sp"></EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddBook"></Button>

</LinearLayout>